--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<section class="wrapper style2 special">
 					<div class="container contacto">
 						<header>
-							<h2>CONTACTENOS</h2>
+							<h2>CONTÁCTENOS</h2>
 						</header>
 						<div class="row"">
 							<div class="col-md-2"> </div>
